@@ -4,6 +4,8 @@ Sun Mar 20 11:54:44 EST 2005
 
 	Do not CD from names on command line
 
+	Support for wheel mouse
+
 Sat Mar 19 17:08:05 EST 2005
 
 	Fix != in math prompt
